<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android News App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="img_no">No Favorite Found</string>
    <string name="desc">desc</string>
    <string name="menu_share">Share</string>
    <string name="menu_next">Next Page</string>
    <string name="menu_fav">Fav</string>
    <string name="menu_back">Previous Page</string>
    <string name="menu_favorite">My Favorite</string>
    <string name="menu_about">About</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_rateapp">Rate App</string>
    <string name="search_hint">Hint</string>
    <string name="refresh">Refresh</string>
    <string name="menu_search">Search</string>
    
    <!-- About Content -->
    <string name="app_email">example@mail.com</string>
    <string name="app_website">http://dimasword.com</string>
    <string name="app_description">Your App Description Here. \nLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </string>

    <!-- Change AdMob Banner and Interstitial ID -->
    <string name="admob_publisher_id">ca-app-pub-2275082029538522/9859232298</string>
    <string name="admob_interstitial_id">ca-app-pub-2275082029538522/3812698697</string>

    <!-- Change Startapp Developer and App ID -->
    <string name="startapp_dev_id">102358176</string>
    <string name="startapp_app_id">203718681</string>
	
	<!-- Parse Push Notification Application ID and Client Key -->
    <string name="parse_application_id">p9UFEJGKofnTsoem9GpfDz3EyL6dXyR01LzUEMSP</string>
    <string name="parse_client_key">5XCkK0gwYh670vE8Avb26etq0hCgJOasHqdtM2sR</string>
    
    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/search?q=solodroid+application</string>

    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="settings">Settings</string>
    <string name="myaccount">My Account</string>
    <string name="stats">Stats</string>
    <string name="search">Search</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    
</resources>