<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/menu_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

            <!-- Refresh -->
		    <item android:id="@+id/refresh"
		          android:title="@string/refresh"
                  app:showAsAction="never"/>

            <!-- Favorite App -->
		    <item android:id="@+id/menu_favorite"
		          android:title="@string/menu_favorite"
                  app:showAsAction="never"/>

		    <!-- Rate App -->
		    <item android:id="@+id/menu_rateapp"
		          android:title="@string/menu_rateapp"
                  app:showAsAction="never"/>

		    <!-- More App -->
		    <item android:id="@+id/menu_moreapp"
		          android:title="@string/menu_moreapp"
                  app:showAsAction="never"/>

		    <!-- About -->
		    <item android:id="@+id/menu_about"
		          android:title="@string/menu_about"
                  app:showAsAction="never"/>

</menu>
