<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     android:background="@color/background_color" >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tool_bar"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/text_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_margin="10dp" />

        <ImageView
            android:id="@+id/image_comlogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/img_no"
            android:src="@drawable/ic_logo_app"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/text_comemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/app_email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/text_comwebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color"
            android:text="@string/app_website"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/app_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color" />
    </LinearLayout>

</RelativeLayout>